--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_open">#EAEAEA</color>
+    <color name="gray_light">#AAAAAA</color>
+    <color name="gray_dark">#474747</color>
+    <color name="bg_color">#474747</color>
+    <color name="colorPrimary">#FF03DAC5</color>
 </resources>
