--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="gray_light">#AAAAAA</color>
     <color name="gray_dark">#474747</color>
     <color name="bg_color">#474747</color>
-    <color name="colorPrimary">#FF03DAC5</color>
+    <color name="colorPrimary">#2196F3</color>
 </resources>
