--- a/app/src/main/res/drawable/segmented_center_btn.xml
+++ b/app/src/main/res/drawable/segmented_center_btn.xml
@@ -37,7 +37,7 @@
                     <stroke android:width="1dp" android:color="@color/colorPrimary" />
                 </shape>
             </item>
-            <item android:bottom="1dp" android:left="1dp" android:right="1dp" android:top="1dp">
+            <item android:bottom="1dp"  android:right="1dp" android:top="1dp">
                 <shape android:shape="rectangle">
                     <solid android:color="@android:color/white" />
                 </shape>
