--- a/app/src/main/res/drawable/segmented_left_btn.xml
+++ b/app/src/main/res/drawable/segmented_left_btn.xml
@@ -8,7 +8,7 @@
                     <corners android:bottomLeftRadius="12dp" android:topLeftRadius="12dp" />
                 </shape>
             </item>
-            <item android:bottom="1dp" android:left="1dp" android:top="1dp">
+            <item android:bottom="1dp" android:left="1dp" android:right="1dp" android:top="1dp">
                 <shape android:shape="rectangle">
                     <solid android:color="@color/colorPrimary" />
                     <corners android:bottomLeftRadius="12dp" android:topLeftRadius="12dp" />
@@ -24,7 +24,7 @@
                     <corners android:bottomLeftRadius="12dp" android:topLeftRadius="12dp" />
                 </shape>
             </item>
-            <item android:bottom="1dp" android:left="1dp" android:top="1dp">
+            <item android:bottom="1dp" android:left="1dp"  android:right="1dp" android:top="1dp">
                 <shape android:shape="rectangle">
                     <solid android:color="@color/colorPrimary" />
                     <corners android:bottomLeftRadius="12dp" android:topLeftRadius="12dp" />
@@ -40,7 +40,7 @@
                     <corners android:bottomLeftRadius="12dp" android:topLeftRadius="12dp" />
                 </shape>
             </item>
-            <item android:bottom="1dp" android:left="1dp" android:top="1dp">
+            <item android:bottom="1dp" android:left="1dp" android:right="1dp"  android:top="1dp">
                 <shape android:shape="rectangle">
                     <solid android:color="@android:color/white" />
                     <corners android:bottomLeftRadius="12dp" android:topLeftRadius="12dp" />
