--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.HepsiburadaCaseMehmetAliVargun" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
+        <item name="morphButtonStyle">@style/Widget.MorphButton</item>
         <item name="colorPrimary">@color/prussian_blue</item>
         <item name="colorPrimaryVariant">@color/prussian_blue</item>
         <item name="colorOnPrimary">@color/white</item>
