--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -22,25 +22,24 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+            tools:src="@tools:sample/avatars"
+            tools:ignore="ContentDescription" />
 
 
         <TextView
             android:id="@+id/collectionName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="2dp"
+            android:layout_margin="2dp"
             android:gravity="center"
             android:maxLines="2"
             android:textColor="@color/black"
             android:textSize="14sp"
+            android:fontFamily="@font/poppins_medium"
             app:autoSizeMaxTextSize="20sp"
             app:autoSizeMinTextSize="12sp"
             app:autoSizeTextType="uniform"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/artWork"
             app:lineHeight="18dp"
@@ -52,8 +51,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/gray_light"
             android:textSize="12sp"
+            android:fontFamily="@font/poppins_medium"
             app:layout_constraintEnd_toEndOf="@+id/collectionName"
             app:layout_constraintStart_toStartOf="@+id/collectionName"
             app:layout_constraintTop_toBottomOf="@+id/collectionName"
@@ -65,9 +65,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/black"
+            android:textColor="@color/green_blue"
             android:textSize="14sp"
             android:visibility="visible"
+            android:fontFamily="@font/poppins_medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/releaseDate"
             app:layout_constraintStart_toStartOf="@+id/releaseDate"
