--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,6 +6,39 @@
     android:layout_height="match_parent"
     android:background="#06151B"
     tools:context=".ui.search.SearchFragment">
+    <LinearLayout
+        android:id="@+id/errorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/filterRadioGroup"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:gravity="center" >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:fontFamily="@font/poppins_medium"
+            android:textColor="@color/white"
+            android:textSize="32sp"
+            android:text="@string/network_error_occured">
+        </TextView>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/networkErrorAnimation"
+            android:layout_width="350dp"
+            android:layout_height="250dp"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/no_internet">
+        </com.airbnb.lottie.LottieAnimationView>
+        <Button
+            android:id="@+id/retry_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/retry">
+        </Button>
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/loadingBar"
@@ -14,7 +47,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/searchNotFound"
+        android:layout_width="350dp"
+        android:layout_height="250dp"
+        app:layout_constraintBottom_toBottomOf="@+id/resultsRV"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/filterRadioGroup"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/load_state" />
+
 
     <RadioGroup
         android:id="@+id/filterRadioGroup"
@@ -35,6 +82,7 @@
             android:layout_weight="1"
             android:background="@drawable/segmented_left_btn"
             android:button="@android:color/transparent"
+            android:fontFamily="@font/poppins_medium"
             android:gravity="center"
             android:padding="8dp"
             android:text="@string/movies"
@@ -47,6 +95,7 @@
             android:layout_weight="1"
             android:background="@drawable/segmented_center_btn"
             android:button="@android:color/transparent"
+            android:fontFamily="@font/poppins_medium"
             android:gravity="center"
             android:padding="8dp"
             android:text="@string/music"
@@ -59,6 +108,7 @@
             android:layout_weight="1"
             android:background="@drawable/segmented_center_btn"
             android:button="@android:color/transparent"
+            android:fontFamily="@font/poppins_medium"
             android:gravity="center"
             android:padding="8dp"
             android:text="@string/apps"
@@ -71,6 +121,7 @@
             android:layout_weight="1"
             android:background="@drawable/segmented_right_btn"
             android:button="@android:color/transparent"
+            android:fontFamily="@font/poppins_medium"
             android:gravity="center"
             android:padding="8dp"
             android:text="@string/books"
