--- a/app/src/main/res/layout/item_network_error.xml
+++ b/app/src/main/res/layout/item_network_error.xml
@@ -14,6 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
